--- a/cv-model/work.html
+++ b/cv-model/work.html
@@ -147,7 +147,7 @@
 					</div>
 					<div class="col-md-12">
 						<div class="work-entry animate-box">
-							<a href="work.html" class="work-img" style="background-image: url(images/cert.jpg);">
+							<a href="work.html" class="work-img" style="background-image: url(images/certi.jpeg);">
 								<div class="display-t">
 									<div class="work-name">
 										<h2>Web & Mobile App for Managing Cameroonian Council Certificates</h2>
